    against the expiration time (if any) of the key that signed it.  If
    the signature timestamp is later than the expiration timestamp,
    the signature is rejected.
  * Pass 'Database is locked' repository errors to the client as a
    RepositoryLocked exception notifying user that the server is busy.
  * The 'yuck' script is no longer installed.

Changes in 0.62.6:
  * mergeCollections() didn't always handle referenced troves changing
    byDefault status
  * Various cleanups and simplifications have been made to the trove
    removal determination

Changes in 0.62.5:
  * Allow selection of individual troves from change set files via --from-file
  * Recursive queries on local database could get upset by a missing trove
  * Underlying dependency code returns version and flavor for troves with
    broken dependencies
  * Underlying dependency code returns information on what removed trove
    caused a broken dependency
  * Removed --no-deps-recurse option
  * Greatly simplify dependency resolution logic
  * The version portion of a Release (version-sourceCount-buildCount)
    is no longer required to begin with a digit.
  * The Release parsing code has been cleaned up to use consistent
    naming, API documentation, and parse error messages
  * An unhandled exception when signing a trove twice with the same key
    has been fixed.
  * Old (now invalid) changesets are now removed from the changeset
    cache when a digital signature is added to a trove.
  * A package is now counted as empty if it contains only files automatically
    found by the AutoDoc policy.
  * CPackageRecipe now requires elfutils:runtime for eu-strip; this is
    needed for the existing debugedit:runtime requirement to do useful
    work.
  * Removed DistroPackageRecipe and moved its buildRequires list to
    PackageRecipe.  Use clearBuildReqs() to remove any of the base
    requirements for a package.
  * Install buckets are respected during dependency resolution